# sanas-actions

./: .gitignore  CHANGELOG.md  index.html  index.prototype.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  actions.py  dependencies.py  settings.py
backend/app/models/: __init__.py  action_item.py  analytics.py  notification.py  settings.py  ticket.py
backend/app/services/: __init__.py  extraction_service.py  jira_service.py  settings_service.py  slack_service.py
backend/app/tests/: conftest.py  test_api_actions.py  test_api_analytics.py  test_api_settings.py  test_database.py  test_extraction_service.py  test_jira_service.py  test_settings_service.py  test_slack_service.py
docs/: index.html
docs/assets/: index-BmwrdayX.css  index-h6BdynSv.js
src/: App.vue  api.js  constants.js  utils.js
src/__tests__/: constants.test.js  utils.test.js
src/__tests__/stores/: actions.test.js  notifications.test.js  settings.test.js
src/assets/: main.css
src/components/: ActionItem.vue  AnalyticsPage.vue  AppHeader.vue  AppSidebar.vue  CreateTab.vue  HistoryTab.vue  MeetingInput.vue  NotificationToast.vue  SettingsPage.vue  SettingsPanel.vue  StepCard.vue  SuccessState.vue
src/stores/: actions.js  index.js  notifications.js  settings.js
